--- a/gb/23/1/24/n13914888.md
+++ b/gb/23/1/24/n13914888.md
@@ -7,16 +7,16 @@
 </h6>
 <hr>
 	<p>【大纪元2023年01月25日讯】（大纪元荷兰鹿特丹记者站报导）“从舞台上散发出来的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%83%BD%E9%87%8F.md#1">能量</a>，你根本无法用语言描述，必须要亲自经历才行。”在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%8D%B7%E5%85%B0%E9%B9%BF%E7%89%B9%E4%B8%B9%E6%96%B0%E5%8D%A2%E5%85%8B%E7%B4%A2%E5%89%A7%E9%99%A2.md#1">荷兰鹿特丹新卢克索剧院</a>（Nieuwe Luxor Theater）大厅里，Erwin Bonte激动地说道。</p>
-<p>Erwin Bonte是荷兰一家大银行的信息和通信技术主管，负责银行数据中心整合和迁移项目。他刚刚和儿子Oliver一起观赏了2023年1月24日晚美国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>环球艺术团在这里的演出。</p>
-<p>这是本年度<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>艺术团巡回演出在这一站的首场，纯善纯美的节目深深打动了现场观众。演出结束后，神韵艺术家谢幕三次，观众纷纷起立鼓掌。最后一次观众情绪达到顶峰，全体欢呼。Erwin Bonte也在其中。</p>
-<p>他表示感受到神韵的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%83%BD%E9%87%8F.md#1">能量</a>，“演出非常特别，她呈现了起源于五千年前的古老传统。这是我至今经历过的最美好的事物，你必须亲自来经历，才能感受到她散发的强大能量。”</p>
+<p>Erwin Bonte是荷兰一家大银行的信息和通信技术主管，负责银行数据中心整合和迁移项目。他和儿子Oliver一起观赏了2023年1月24日晚美国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>环球艺术团在这里的演出。</p>
+<p>这是本年度<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>艺术团巡回演出在当地的首场，纯善纯美的节目深深打动了现场观众。演出结束后，神韵艺术家谢幕三次，观众纷纷起立鼓掌致敬。最后一次谢幕时，观众情绪达到顶峰，全体欢呼。Erwin Bonte也在其中。</p>
+<p>他表示，“演出非常特别，她呈现了起源于五千年前的古老传统。这是我至今经历过的最美好的事物，你必须亲自来经历，才能感受到她散发的强大<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%83%BD%E9%87%8F.md#1">能量</a>。”</p>
 <p>Bonte表示观赏神韵令人难忘，“这真的是一种美好的体验，这种美好的感知让人难以忘怀。”</p>
 <p>他说，“演出真是美丽非凡，一切都非常同步，并且所有的艺术细节都非常考究、精致，真的太美了！”</p>
-<p>神韵以复兴中国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>为宗旨，引起Bonte的共鸣。他说，“传统文化中一切都是如此祥和，你可以看到节目中那些祥和的事情是如何发生的，我们应该从中学习。我希望，现在的世人可以看到古代的人是如何生活的，什么是人类应该有的状态。”</p>
+<p>神韵以复兴中国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>为宗旨，引起Bonte的共鸣。他说，“传统文化中一切都是如此祥和，你可以看到节目中展现的那些祥和的事情，我们应该从中学习。我希望，现在的世人可以看到古代的人是如何生活的，什么是人类应该有的状态。”</p>
 <p>这样美好的传统被中共几乎毁灭殆尽，Bonte感到非常痛惜，“太糟糕了，她被遗失了，是以这种方式被遗失的。”</p>
 <p>神韵演出有表现法轮功学员反迫害的节目，Bonte被深深触动，“我觉得这个节目非常好，具有强大的艺术张力。我不知道在当今的中国有这样的事情发生，遗憾的是，这里的媒体对此没有报导。”</p>
-<p>儿子Oliver也非常喜欢神韵，他用如同“身体过电”来形容观赏神韵的感受，“我演出美到了极致，在一些地方我感到身体如同过电一般，我没有办法用语言来描绘这种特别的感受。我认为演出充满了智慧。”</p>
-<p>他认同父亲的看法，为<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>被中共几乎毁灭殆尽而痛惜，“我的想法和父亲一样。遗憾的是，共产主义仍然在中国发挥作用，那里不是每个人都被允许做真正的自己。”</p>
+<p>儿子Oliver也非常喜欢神韵，他用如同“身体过电”来形容观赏神韵的感受，“演出美到了极致，在一些地方我感到身体如同过电一般，我没有办法用语言来描绘这种特别的感受。我认为演出充满了智慧。”</p>
+<p>他也为<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">传统文化</a>被中共几乎毁灭殆尽而感到痛惜，“我的想法和父亲一样。遗憾的是，共产主义仍然在中国发挥作用，在那里不是每个人都被允许做真正的自己。”</p>
 <p>责任编辑：周仁</p>
 	
 <hr>
@@ -33,31 +33,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10044605.md#1" target="_blank">共产党暴政录：反右运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977691.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(1) 不一样的人生</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/22/n11539349.md#1" target="_blank">共产暴政录：从毛泽东诗词谈中共卖国</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/7/n10697882.md#1" target="_blank">这些患绝症的精英们何以逢生（2）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910412.md#1">楚一丁：天道示警——三年死了四亿人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/18/n13909653.md#1">【未解之谜】西方极乐世界游记（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/14/n13906912.md#1">传统年俗代代传  只为守护天人相系的纽带</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910383.md#1">【百年真相】差点改写九一三事件 林豆豆挨整始末</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/16/n13908165.md#1">【杨延昭传奇】一亩泉三战恶龙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914233.md#1">【神韵早期节目】蒙古女子筷子舞（2015年制作）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/24/n13914646.md#1">【晚间新闻】棺材板上办春晚 尸骨堆里庆新年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914176.md#1">【新闻大家谈】蓬佩奥曝光白宫秘闻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/17/n13908788.md#1">在Costco买七样东西囤货 可在一整年省钱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13913032.md#1">春晚小品演出缩短2分多钟 触发所有应急预案</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13912765.md#1">疫情冲击春晚 演员染疫无法排练 节目大删减</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13913498.md#1">穿30年前旗袍拜年 55岁周慧敏冻龄外表获赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13913535.md#1">沈腾春晚小品《坑》窜热搜 话题惊动中纪委</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914214.md#1">林志颖康复露面气色佳 拍品牌形象片拜年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13912840.md#1">除夕夜广发200个红包 郁方分享有意义的一天</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13914317.md#1">李若彤分享冻龄秘笈：20多年没喝汽水</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13913695.md#1">寒冬还没来 2023年影响美国地产的重磅消息！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13910496.md#1">学会放下，幸福就来了！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905189.md#1">空间小杂物多 运用收纳小物 浴室不再乱糟糟</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/23/n13913652.md#1">【美食天堂】鲜虾锅贴做法～ 皮酥脆馅料多汁美味！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/22/n13913310.md#1">香草精用完了？ 这八类食材可替代</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948717.md#1">汉宫的明珠——王昭君</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962873.md#1">【未解之谜】非洲UFO事件 数十小学生的奇遇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963483.md#1">【新闻看点】中共军机越台海中线 习近平在备战</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963063.md#1">惧政权不稳 中共推“一村一警”扩大监控</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962350.md#1">孙艺真与玄彬结婚一周年 IG发照片庆祝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962128.md#1">黄秋生首演废佬角色 大赞影片导演真勇敢</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949145.md#1">想成为一个有钱人？ 财务自由的七大好处</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/24/n13914888.htm">感受强大能量 银行主管：神韵是最美好事物</a></p><hr>
